fix(GlLabel): Fix visibility of underline on hover and focus state
Fix visibility of underline color of the scoped text portion
when text is reversed (white) on the left side

--- a/src/components/base/label/label.scss
+++ b/src/components/base/label/label.scss
@@ -33,6 +33,9 @@ $label-close-button: '.gl-label-close.gl-button';
     &:hover {
       @include gl-reset-color;
       @include gl-shadow-none;
+      .gl-label-text-scoped {
+        @include gl-text-decoration-underline;
+      }
     }
   }
 
